# hyperbolic_crystals

./: .gitignore  CMakeLists.txt  Config.cmake  README.md  configure.bat  configure.sh  group_specs.inp
OpenBLAS/: OpenBLAS64Config.cmake  README.md
data/: README.md
gap/: fuchsian.wls  lins_fuchsian_group.g  lins_triangle_group.g  run_fuchsian.sh  run_gap.sh  triangle_group.wls
include/: fuchsian_group.h  fuchsian_ring.h  ring_extension.h  tffg_group.h  triangle_group.h
py/: README.md  Y_junction.py  bolza_hoppings.py  clifford_algebra.py  dos.py  fortran_spec.py  fuchsian_insulator.py  fuchsian_iomodule.py  hyperbolic_disk.py  interpolate_all.py  interpolate_path.py  iomodule.py  kpm.py  laplace_operator.py  open_boundary_conditions.py  open_boundary_projector.py  plot_partition_of_unity.py  post_panel_figure.py  post_process_ABCpath.py  post_process_bolza_mag_dos_kpm.py  post_process_fortran_spectrum.py  post_process_fuchsian_insulator.py  post_process_junction.py  post_process_mag_dos.py  post_process_open_boundary_condition.py  post_process_open_boundary_projector.py  post_process_panel_figure.py  post_process_tffg_dos_kpm.py  post_process_tffg_hofstadter.py  post_process_tffg_hofstadter_kpm.py  post_process_tffg_localization.py  post_process_tffg_mag.py  post_process_tffg_nnn_dos_kpm.py  post_process_tffg_t_scan_kpm.py  projector_interpolation.py  run_area_cocycle.py  run_bolza_check.py  run_bolza_mag_dos_kpm.py  run_exact_diagonalization.py  run_exact_diagonoalization.py  (+23 more)
scripts/: generate_hamiltonian.py  inpgen.py  iomodule.py
src/: CMakeLists.txt  dsyev_hamiltonian.f90  exact_diagonalization.f90  fuchsian_generate_group.cpp  fuchsian_generate_reg.cpp  fuchsian_group.cpp  fuchsian_ring.cpp  generate_group.cpp  generate_group_open.cpp  generate_laplacian.cpp  generate_reg.cpp  npy.f90  pdsyev_hamiltonian.f90  ring_extension.cpp  tffg_generate_group.cpp  tffg_generate_reg.cpp  tffg_group.cpp  triangle_group.cpp
tests/: CMakeLists.txt  test_boost_string.cpp  test_ring_extension.cpp  test_tffg_group.cpp  test_triangle_group.cpp
wls/: 8_3_triangle_group.wls  README.md  cocycle_illustration.wls  fuchsian_embedding.wls  generate_graph.wls  generate_group_generators.wls  generate_ring_extension.wls  generate_ring_reduction.wls  hofstadter_2d.wls  laplace_matrix_plot.wls  plot_hyperbolic_lattice.wls  plot_ldos.wls  plot_surface_groups.wls  plot_tffg.wls  poincare.wls  ring_reduction.inp
wls/generators/: 10_10.B  10_10.Y  10_11.B  10_11.Y  10_11.Z  10_12.B  10_12.Y  10_12.Z  10_13.B  10_13.X  10_13.Y  10_13.Z  10_14.B  10_14.Y  10_14.Z  10_15.B  10_15.X  10_15.Y  10_16.B  10_16.Y  10_17.B  10_17.Y  10_17.Z  10_18.B  10_18.Y  10_18.Z  10_19.B  10_19.Y  10_19.Z  10_20.B  10_20.X  10_20.Y  10_20.Z  10_3.B  10_3.X  10_3.Y  10_3.Z  10_4.B  10_4.X  10_4.Y  (+1037 more)
